--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Note App</title>
-	<link rel="icon" href="/img/logo.png" type="image/png">
+	<link rel="icon" href="/note-app/img/logo.png" type="image/png">
 </head>
 
 <body>
